_sass/_layout.scss
.post, .home {
    background-color: #fcfcfc;
    padding: 16px 8px;
}

/**
 * Site header
 */
.site-header {
    border-bottom: 1px solid rgb(255, 135, 0);
    min-height: 56px;

    // Positioning context for the mobile navigation icon
    position: relative;
}

.site-title {
    font-size: 26px;
    line-height: 56px;
    letter-spacing: -1px;
    margin-bottom: 0;
    padding-left: 8px;
    float: left;

    &,
    &:visited {
        color: $grey-color-dark;
    }
}

.site-nav {
    float: right;
    line-height: 56px;

    .menu-icon {
        display: none;
    }

    .page-link {
        color: $text-color;
        line-height: $base-line-height;

        // Gaps between nav items, but not on the first one
        &:not(:first-child) {
            margin-left: 20px;
        }
    }

    @include media-query($on-palm) {
        position: absolute;
        top: 9px;
        right: 30px;
        background-color: $background-color;
        border: 1px solid $grey-color-light;
        border-radius: 5px;
        text-align: right;

        .menu-icon {
            display: block;
            float: right;
            width: 36px;
            height: 26px;
            line-height: 0;
            padding-top: 10px;
            text-align: center;

            > svg {
                width: 18px;
                height: 15px;

                path {
                    fill: $grey-color-dark;
                }
            }
        }

        .trigger {
            clear: both;
            display: none;
        }

        &:hover .trigger {
            display: block;
            padding-bottom: 5px;
        }

        .page-link {
            display: block;
            padding: 5px 10px;
        }
    }
}



/**
 * Site footer
 */
.site-footer {
  font-size: 15px;
  color: $grey-color;
  margin-left: 8px;
}

.footer-heading {
    font-size: 18px;
    margin-bottom: $spacing-unit / 2;
}

.contact-list,
.social-media-list {
    list-style: none;
    margin-left: 0;
}

/**
 * Page content
 */
.page-heading {
    font-size: 20px;
}

.post-list {
    margin-left: 0;
    list-style: none;

    > li {
        margin-bottom: 8px;

        > h2 {
          margin-bottom: 0;
        }
    }
}

.post-meta {
    font-size: $small-font-size;
    color: $grey-color;
}

.post-link {
    display: block;
    font-size: 20px;
}



/**
 * Posts
 */
.post-header {
    margin-bottom: $spacing-unit;
}

.post-title {
    letter-spacing: -1px;
    line-height: 1;

    @include media-query($on-laptop) {
        font-size: 36px;
    }
}

.post-content {
    margin-bottom: $spacing-unit;

    h2 {
        font-size: 2.6rem;

        @include media-query($on-laptop) {
            font-size: 2.4rem;
        }
    }

    h3 {
        font-size: 2.4rem;

        @include media-query($on-laptop) {
            font-size: 2.2rem;
        }
    }

    h4 {
        font-size: 2rem;

        @include media-query($on-laptop) {
            font-size: 1.8rem;
        }
    }
}

ul.gallery {
  list-style-type: none;
}

ul.gallery li {
  display: inline;
}

ul.gallery img {
  width: 144px;
  height: 144px;
  margin-right: 4px;
  margin-bottom: 8px;
  object-fit: cover;
}

